--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "browser-sync": "^2.18.5"
   },
   "scripts": {
-    "start": "node index.js",
-    "whatever": "browser-sync start --files ., !.gitignore",
+    "start": "browser-sync start --files ., !.gitignore",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
